--- a/android/app/src/main/res/drawable/launch_background.xml
+++ b/android/app/src/main/res/drawable/launch_background.xml
@@ -8,5 +8,11 @@
         <bitmap
             android:gravity="center"
             android:src="@mipmap/launch_image" />
+
     </item> -->
+    <item
+        android:width="200dp"
+        android:height="300dp"
+        android:drawable="@drawable/logo"
+        android:gravity="center" />
 </layer-list>
